<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/product_table"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bike_blue_500"
    android:stretchColumns="@string/one_int"
    tools:context=".product.ProductTable">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="20dp"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="30dp"
            android:layout_column="0"
            android:layout_weight="1"
            android:gravity="end"
            android:shadowColor="@color/white"
            android:shadowRadius="2"
            android:text="@string/id"
            android:textAllCaps="true"
            android:textColor="@color/table_red"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="75dp"
            android:layout_column="1"
            android:layout_weight="1"
            android:gravity="end"
            android:shadowColor="@color/white"
            android:shadowRadius="2"
            android:text="@string/name"
            android:textAllCaps="true"
            android:textColor="@color/table_red"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="100dp"
            android:layout_column="2"
            android:layout_weight="1"
            android:gravity="end"
            android:shadowColor="@color/white"
            android:shadowRadius="2"
            android:text="@string/brand"
            android:textAllCaps="true"
            android:textColor="@color/table_red"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="100dp"
            android:layout_column="3"
            android:layout_weight="1"
            android:gravity="end"
            android:shadowColor="@color/white"
            android:shadowRadius="2"
            android:text="@string/quantity"
            android:textAllCaps="true"
            android:textColor="@color/table_red"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="100dp"
            android:layout_column="4"
            android:layout_weight="1"
            android:gravity="center"
            android:shadowColor="@color/white"
            android:shadowRadius="2"
            android:text="@string/price"
            android:textAllCaps="true"
            android:textColor="@color/table_red"
            android:textSize="15sp"
            android:textStyle="bold" />

    </TableRow>

</TableLayout>