<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bike_blue_300"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".product.ProductUpdateForm">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:shadowColor="@color/white"
        android:shadowRadius="2"
        android:text="@string/update_product"
        android:textColor="@color/purple_200"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/product_name_update"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:autofillHints="New name of the product"
        android:hint="@string/name"
        android:padding="10sp"
        android:textAlignment="center"
        android:textColor="@color/gray1"
        android:textColorHint="@color/purple_200"
        android:inputType="text" />

    <EditText
        android:id="@+id/product_brand_update"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:autofillHints="New brand of the product"
        android:hint="@string/brand"
        android:padding="10sp"
        android:textAlignment="center"
        android:textColor="@color/gray1"
        android:textColorHint="@color/purple_200"
        android:inputType="text"/>

    <EditText
        android:id="@+id/product_quantity_update"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:autofillHints="New quantity of the product"
        android:hint="@string/quantity"
        android:padding="10sp"
        android:textAlignment="center"
        android:textColor="@color/gray1"
        android:textColorHint="@color/purple_200"
        android:inputType="number"/>

    <EditText
        android:id="@+id/product_price_update"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:autofillHints="New price of the product"
        android:hint="@string/price"
        android:padding="10sp"
        android:textAlignment="center"
        android:textColor="@color/gray1"
        android:textColorHint="@color/purple_200"
        android:inputType="numberDecimal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="30dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/update_button"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:text="@string/update_product"
            android:background="@color/bike_blue_700"
            />



    </LinearLayout>



</LinearLayout>